--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>F1 Landing Page</title>
   </head>
+
   <body>
-    <div id="fondo">
+    <div>
       <img src="../F1-Microsite/imagenes/F1_logo.png" alt="gp mex_logo" />
-      <img src="../F1-Microsite/imagenes/Fondo_desktop.svg" />
       <img src="../F1-Microsite/imagenes/Pista.svg" />
     </div>
     <div>
@@ -22,7 +22,7 @@
       <button class="grada azul">4</button>
     </div>
     <div>
-        <button class="boton_redondo">FC</button>
+      <button class="boton_redondo">FC</button>
       <button class="grada_azul">5</button>
     </div>
     <div>
@@ -30,13 +30,22 @@
       <button class="grada azul">6</button>
     </div>
     <div>
-        <button class="boton_redondo">FZ</button>
+      <button class="boton_redondo">FZ</button>
       <button class="grada_azul">7</button>
     </div>
     <div>
       <button class="grada_naranja">11</button>
-      <button class="boton_redondo"><BG/button>
+      <button class="boton_redondo">BG</button>
     </div>
+    <div>
+      <button class="boton_redondo">FC</button>
+      <button class="boton_redondo">BG</button>
+    </div>
+    <div>
+      <button class="boton_redondo">FC</button>
+      <button class="boton_redondo">BG</button>
+    </div>
+
     <div>
       <button class="grada_amarilla">10</button>
       <button class="grada_amarilla">8</button>
