--- a/index.html
+++ b/index.html
@@ -4,37 +4,40 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>F1 Landing Page</title>
+    <title>GP Mex</title>
+    <link rel="stylesheet" href="styles.css" />
   </head>
-
   <body>
-    <div>
-      <img src="../F1-Microsite/imagenes/F1_logo.png" alt="gp mex_logo" />
-      <img src="../F1-Microsite/imagenes/Pista.svg" />
+    <img id="logo" src="img/f1_logo_blank.png" alt="gp mex_logo" />
+    <div id="sup_1">
+      <img id="pista" src="img/Pista.svg" alt="pista" />
+      <div id="botones_1">
+        <button class="boton_redondo">BG</button>
+        <button class="grada_verde" id="grada_gd">1</button>
+        <button class="grada_verde" id="grada_med">2</button>
+        <button class="grada_verde" id="grada_ch">3</button>
+        <button class="boton_redondo">FZ</button>
+      </div>
+      <div id="botones_2">
+        <button class="boton_redondo">FC</button>
+        <button class="grada_azul" id="grada_ch">4</button>
+      </div>
     </div>
+
     <div>
-      <button class="boton_redondo">BG</button>
-      <button class="grada_verde">1</button>
-      <button class="grada_verde">2</button>
-      <button class="grada verde">3</button>
-      <button class="boton_redondo">FZ</button>
       <button class="boton_redondo">FC</button>
-      <button class="grada azul">4</button>
+      <button class="grada_azul" id="grada_ch">5</button>
     </div>
     <div>
-      <button class="boton_redondo">FC</button>
-      <button class="grada_azul">5</button>
-    </div>
-    <div>
-      <button class="grada_naranja">12</button>
-      <button class="grada azul">6</button>
+      <button class="grada_naranja" id="grada_med">12</button>
+      <button class="grada_azul" id="grada_ch">6</button>
     </div>
     <div>
       <button class="boton_redondo">FZ</button>
-      <button class="grada_azul">7</button>
+      <button class="grada_azul" id="grada_ch">7</button>
     </div>
     <div>
-      <button class="grada_naranja">11</button>
+      <button class="grada_naranja" id="grada_med">11</button>
       <button class="boton_redondo">BG</button>
     </div>
     <div>
@@ -47,11 +50,11 @@
     </div>
 
     <div>
-      <button class="grada_amarilla">10</button>
-      <button class="grada_amarilla">8</button>
+      <button class="grada_amarilla" id="grada_med">10</button>
+      <button class="grada_amarilla" id="grada_med">8</button>
     </div>
     <div>
-      <button class="grada_amarilla">9</button>
+      <button class="grada_amarilla" id="grada_ch">9</button>
     </div>
   </body>
 </html>
