--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <img id="logo" src="img/f1_logo_blank.png" alt="gp mex_logo" />
     <div id="sup_1">
       <img id="pista" src="img/Pista.svg" alt="pista" />
+      <div id="botones">
       <div id="botones_1">
         <button class="boton_redondo">BG</button>
         <button class="grada_verde" id="grada_gd">1</button>
@@ -22,39 +23,59 @@
         <button class="boton_redondo">FC</button>
         <button class="grada_azul" id="grada_ch">4</button>
       </div>
-    </div>
+      <div id="botones_3">
+        <button class="boton_redondo">FC</button>
+        
+      </div>
 
-    <div>
-      <button class="boton_redondo">FC</button>
-      <button class="grada_azul" id="grada_ch">5</button>
-    </div>
-    <div>
-      <button class="grada_naranja" id="grada_med">12</button>
-      <button class="grada_azul" id="grada_ch">6</button>
-    </div>
-    <div>
-      <button class="boton_redondo">FZ</button>
-      <button class="grada_azul" id="grada_ch">7</button>
-    </div>
-    <div>
-      <button class="grada_naranja" id="grada_med">11</button>
-      <button class="boton_redondo">BG</button>
-    </div>
-    <div>
-      <button class="boton_redondo">FC</button>
-      <button class="boton_redondo">BG</button>
-    </div>
-    <div>
-      <button class="boton_redondo">FC</button>
-      <button class="boton_redondo">BG</button>
-    </div>
+      <div id="botones_4">
+        <button class="grada_azul" id="grada_ch">5</button>
+      </div>
 
-    <div>
-      <button class="grada_amarilla" id="grada_med">10</button>
-      <button class="grada_amarilla" id="grada_med">8</button>
+      <div id="botones_5">
+        <button class="grada_naranja" id="grada_med">12</button>
+        
+      </div>
+      <div id="botones_6">
+        <button class="grada_azul" id="grada_ch">6</button>
+      </div>
+      <div id="botones_7">
+        <button class="grada_azul" id="grada_ch">7</button>
+      </div>
+      <div id="botones_8">
+        <button class="boton_redondo">FZ</button>
+      </div>
+      <div id="botones_9">
+        <button class="grada_naranja" id="grada_med">11</button>
+      </div>
+      <div id="botones_10"> 
+        <button class="boton_redondo">BG</button>
+      </div>
+      <div id="botones_11">
+        <button class="boton_redondo">FC</button>
+      </div>
+      <div id="botones_12">
+        <button class="boton_redondo">BG</button>
+      </div>
+      <div id="botones_13">
+        <button class="boton_redondo">FC</button>
+      </div>
+      <div id="botones_14">
+        <button class="boton_redondo">BG</button>
+      </div>
+      <div id="botones_15">
+        <button class="grada_amarilla" id="grada_med">10</button>
+      </div>
+      <div id="botones_16">
+        <button class="grada_amarilla" id="grada_med">8</button>
+      </div>
+      <div id="botones_17">
+        <button class="grada_amarilla" id="grada_ch">9</button>
+      </div>
     </div>
-    <div>
-      <button class="grada_amarilla" id="grada_ch">9</button>
+    <div class="tarjeta">
+        <h2>Elige tu experiencia</h2>
+        <h4>Da click para comprar</h4>
     </div>
   </body>
 </html>
